<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="time1">First heat</string>
    <string name="time2">Second heat</string>
    <string name="ok">OK</string>
    <string name="delete">Del</string>
    <string name="app_name">Moto Gymkhana</string>
    <string name="sort">Start numbers</string>
    <string name="resort">Order</string>
    <string name="action_settings">Settings</string>
    <string name="disqualify">D</string>
    <string name="e">E</string>
    <string name="up_2016">2016</string>
    <string name="eu">EU</string>

    <string name="password">Password</string>
    <string name="no_password">You are not an admin</string>
    <string name="password_too_short">Seriously? Password should be 6+ characters</string>

    <string name="no_results">No results yet</string>
    <string name="results">Results</string>
    <string name="start_list">Start List</string>
    <string name="totals">Season Totals</string>
    <string name="registration">Registration</string>

    <!--settings-->
    <string name="percentage_blue_bib">% for blue bib</string>
    <string name="percentage_green_bib">% for green bib</string>
    <string name="number_of_rounds_for_season_result">Number of rounds for season result</string>
    <string name="number_of_rounds_for_bib">Number of rounds for new bib</string>


    <!--server -->
    <string name="server">Server</string>
    <string name="port">Port</string>
    <string name="test_server">Test server</string>

    <!-- other menu items -->
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="unreset">Undo reset</string>
    <string name="new_rider">Add Rider</string>
    <string name="start_numbers">Generate start numbers</string>
    <string name="load_file">Load Riders File</string>
    <string name="download_riders">Download Riders</string>
    <string name="upload_riders">Upload Riders</string>
    <string name="upload_dates">Upload Rounds/Dates</string>
    <string name="admin">Admin</string>
    <string name="text">Text</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="save_witty_file">Save Witty file</string>

    <!-- rider -->
    <string name="number">Number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="bib">Bib</string>
    <string name="start_number">start number</string>

    <!--views -->
    <string name="plus_text">+</string>
    <string name="minus_text">-</string>

    <!-- ssl -->
    <string name="keystore_password">smndbvr</string>
    <string name="no_rounds_planned">No races planned yet</string>
    <string name="manage_rounds">Manage rounds</string>
    <string name="alertOk">OK</string>
    <string name="add_date">Add date</string>
    <string name="save">Save</string>
    <string name="bike">Bike</string>
    <string name="rider_text">Text</string>
    <string name="view_rider">Rider details</string>
    <string name="no_totals_for_one_round">No season totals if there is only one round</string>
    <string name="no_rounds_held">No races were organized.</string>
    <string name="points">points</string>
    <string name="upload_rounds_manually">Don\'t forget to upload the rounds manually.</string>
    <string name="female_sign">\u2640</string>
    <string name="email">Email</string>
    <string name="storage_permission_title">Permission requested</string>
    <string name="storage_permission_text">The app would like to write to the flash memory of your phone.</string>
    <string name="debug_text">DEV</string>

</resources>