<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.motogymkhana.competition.MainActivity" >

    <item
        android:id="@+id/country"
        android:showAsAction="always"
        android:title="nl"/>

    <item
        android:id="@+id/settings"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/start_numbers"
        android:showAsAction="never"
        android:title="@string/start_numbers"/>
    <item
        android:id="@+id/new_rider"
        android:showAsAction="never"
        android:title="@string/new_rider"/>
    <item
        android:id="@+id/load_file"
        android:showAsAction="never"
        android:title="@string/load_file"/>
    <item
        android:id="@+id/download_riders"
        android:showAsAction="never"
        android:title="@string/download_riders"/>
    <item
        android:id="@+id/upload_riders"
        android:showAsAction="never"
        android:title="@string/upload_riders"/>
    <item
        android:id="@+id/upload_dates"
        android:showAsAction="never"
        android:title="@string/upload_dates"/>
    <item
        android:id="@+id/text"
        android:showAsAction="never"
        android:title="@string/text"/>
    <item
        android:id="@+id/admin"
        android:showAsAction="never"
        android:title="@string/admin"/>
    <item
        android:id="@+id/admin_settings"
        android:showAsAction="never"
        android:title="@string/admin_settings"/>
    <item
        android:id="@+id/save_witty_file"
        android:showAsAction="never"
        android:title="@string/save_witty_file"/>

</menu>